<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">DreamPuzzleHallUtil</string>
	<string translatable="false" name="theme_code">hall</string>
	<string translatable="false" name="flurry_api_key">DF379J53KFNWVNJKC87T</string>
    <string translatable="false" name="ad_banner_id">ca-app-pub-9889936371937089/1818232450</string>
	<string translatable="false" name="ad_interstitial_id">ca-app-pub-9889936371937089/2688872059</string>
	<string translatable="false" name="is_debug">false</string>
	<string translatable="false" name="has_ads">true</string>
	<string translatable="false" name="has_google">true</string>
	<string translatable="false" name="is_adult">false</string>

    <string name="main_actionbar_update">Update</string>
    <string name="main_actionbar_settings">Settings</string>
	<string name="main_button_play_text">PLAY</string>
	<string name="main_button_continue_text">CONTINUE</string>

	<string name="puzzle_sub_title">Moves:&#160;%1$d&#160;&#160;Completeness:&#160;%2$d/%3$d</string>
	<string name="puzzle_time_label">Time:&#160;</string>
	<string name="puzzle_hints_label">HINTS</string>
	<string name="puzzle_hints_view_label">VIEW x&#160;</string>
	<string name="puzzle_hints_move_label">MOVE x&#160;</string>
		
	<string name="FINISHED_LEVEL_LABEL">Level:&#160;</string>
	<string name="FINISHED_PIECES_LABEL">Pieces:&#160;</string>
	<string name="FINISHED_PLAYER">PLAYER</string>
	<string name="FINISHED_BEST">BEST</string>
	<string name="FINISHED_WALLPAPER_SUCCESSFULLY">Successfully</string>
	<string name="finished_steps">MOVES:&#160;</string>
	<string name="finished_time">TIME:&#160;</string>
	
	<string name="finished_difficulty_label">Difficulty:&#160;</string>
	<string name="finished_player_label">PLAYER</string>
	<string name="finished_record_label">RECORD</string>
	<string name="finished_newrecord_label">NEW RECORD</string>
	<string name="finished_time_label">Time:&#160;</string>
	<string name="finished_moves_label">Moves:&#160;</string>
	
	<string name="preview_difficulty_label">Difficulty:&#160;</string>
	<string name="preview_record_label">Record:&#160;</string>
	<string name="preview_norecord_label">No record</string>
	<string name="preview_menu_btn_allrecords">Records</string>
	<string name="preview_menu_btn_wallpaper">Wallpaper</string>
	<string name="preview_menu_btn_share">Share</string>
	
	<string name="records_header_difficulty">DIFFICULTY</string>
	<string name="records_header_time">TIME</string>
	<string name="records_header_moves">MOVES</string>
	<string name="records_norecords">NO RECORD :(</string>
						
	<string name="DIALOG_RATE_MSG">\nIf you like our game please support the development of new features by giving it a 5 star rating!\n</string>
	<string name="DIALOG_EXIT_MSG">\nAre you sure you want to quit the application?\n</string>
	<string name="NO_SDCARD">Please mount your SD card.</string>
	<string name="SHARE_TEXT">I would like to share the app with you.\nURL of the application:\n</string>
	<string name="DIALOG_CUSTOM_GRID_DELETE_TITLE">Delete</string>
	<string name="DIALOG_CUSTOM_GRID_DELETE_MSG">Are you sure you want to delete the puzzle ?</string>
	<string name="CUSTOM_EDITPIC_ZOOM_RECT_TOAST">(Zoom the rectangle with two fingers)</string>
	<string name="OPTIONS_NEWGAME_GRID_TITLE">Options</string>
	<string name="OPTIONS_NEWGAME_GRID_ITEM_CONTINUE_DOWNLOADING">Continue downloading</string>
	<string name="OPTIONS_NEWGAME_GRID_ITEM_DELETE">Delete</string>
	<string name="OPTIONS_NEWGAME_GRID_ITEM_PLAY">Play</string>
	<string name="OPTIONS_NEWGAME_GRID_ITEM_REBUILD">Rebuild and fix</string>
	<string name="DIALOG_NEWGAME_GRID_DELETE_TITLE">Delete</string>
	<string name="DIALOG_NEWGAME_GRID_DELETE_MSG">Are you sure you want to delete the puzzle ?</string>
	<!-- for multi importing of custom -->
	<string name="CUSTOM_FOLDER_IMPORT_DIALOG_TITLE">Import picture</string>
	<string name="CUSTOM_FOLDER_IMPORT_DIALOG_MSG">Processing &#8230;</string>
	<string name="CUSTOM_PICS_DELETE_DIALOG_TITLE">Delete picture</string>
	<string name="CUSTOM_PICS_DELETE_DIALOG_MSG">Processing &#8230;</string>
	<string name="CUSTOM_SELECTED_TITLE">Selected</string>
	<string name="CUSTOM_ACTIONBAR_SELECT_ALL">Select all</string>
	<string name="CUSTOM_ACTIONBAR_DESELECT_ALL">Deselect all</string>
	<string name="ACTIONBAR_ADD">Add</string>
	<string name="ACTIONBAR_DELETE">Delete</string>
	<string name="ACTIONBAR_SAVE">Save</string>
	<string name="ACTIONBAR_BATCH">Batch</string>
	<string name="ACTIONBAR_CAMERA">Camera</string>
	<string name="ACTIONBAR_MANUALLY">Hand-crop</string>
	<string name="DIALOG_APKUPDATE_TITLE">Update available</string>
	<string name="DIALOG_APKUPDATE_MSG">Update to the latest version.</string>
	<string name="PROGRESS_APK_DOWNLONGING_TITLE">Update</string>
	<string name="PROGRESS_APK_DOWNLONGING_MSG">Downloading &#8230;</string>
	<!-- new settings activity -->
	<string name="PREF_TITLE">SETTINGS</string>
	<string name="PREF_UPDATE_CATEGORY_TITLE">UPDATE</string>
	<string translatable="false" name="PREF_UPDATE_CATEGORY_KEY">update_category_key</string>
	<string translatable="false" name="PREF_UPDATE_KEY">pref_update</string>
	<string name="PREF_UPDATE_TITLE">Update available</string>
	<string name="PREF_UPDATE_SUMMAY">Tap to update.</string>
	<string name="PREF_GENERAL">GENERAL</string>
	<string translatable="false" name="PREF_SKIN_KEY">skin</string>
	<string name="PREF_SKIN_TITLE">Skin</string>
	<string name="PREF_BACKGROUND_MUSIC">Background music</string>
	<string translatable="false" name="PREF_BACKGROUND_MUSIC_KEY">background_music</string>
	<string name="PREF_BACKGROUND_MUSIC_SUMMARY_ON">Play background music.</string>
	<string name="PREF_BACKGROUND_MUSIC_SUMMARY_OFF">Background music off.</string>
	<string name="PREF_SOUND_EFFECT">Sound effect</string>
	<string translatable="false" name="PREF_SOUND_EFFECT_KEY">sound_effect</string>
	<string name="PREF_SOUND_EFFECT_SUMMARY_ON">After moving a picture, play a sound.</string>
	<string name="PREF_SOUND_EFFECT_SUMMARY_OFF">Sound effect off.</string>
	<string name="PREF_SCREEN_FULL">Fit screen</string>
	<string translatable="false" name="PREF_SCREEN_FULL_KEY">full_screen</string>
	<string name="PREF_SCREEN_FULL_SUMMARY_ON">Auto crop and zoom pictures to fit full screen.</string>
	<string name="PREF_SCREEN_FULL_SUMMARY_OFF">Just zoom pictures to fit screen.</string>
	<string name="PREF_DIFFICULTY_TITLE">Difficulty</string>
	<string name="PREF_DIFFICULTY_SUMMARY">Choose a difficulty level</string>
	<string name="PREF_DIFFICULTY_ENTRY_SUFFIX">pieces</string>
	<string translatable="false" name="PREF_DIFFICULTY_KEY">difficulty</string>
	<string translatable="false" name="PREF_DIFFICULTY_DEFAULT">5x4</string>
	<string translatable="false" name="PREF_DIFFICULTY_DEFAULT_SMALL">4x3</string>
	<string name="PREF_DIFFICULTY_DIALOG_TITLE">Choose a difficulty</string>
	<string name="PREF_ABOUT_CATEGORY_TITLE">ABOUT</string>
	<string translatable="false" name="PREF_ABOUT_CATEGORY_KEY">pref_about_key</string>
	<string translatable="false" name="PREF_ABOUT_VERSION_KEY">pref_version</string>
	<string name="PREF_ABOUT_VERSION_SUMMARY">Tap to get more free apps.</string>
	<string translatable="false" name="PREF_ABOUT_RATE_KEY">pref_rate</string>
	<string name="PREF_ABOUT_RATE_TITLE">Rate our game</string>
	<string name="PREF_ABOUT_RATE_SUMMARY">If you like our game please support the development of new features by giving it a 5 star rating!</string>
	<string name="PREF_USERDATA_TITLE">USER DATA</string>
	<string translatable="false" name="PREF_USERDATA_CLEAR_HISTORY_KEY">clear_history</string>
	<string name="PREF_USERDATA_CLEAR_HISTORY_TITLE">Clear history</string>
	<string name="PREF_USERDATA_CLEAR_HISTORY_SUMMARY">Clear all user activity records and scores.</string>
	<string name="PREF_USERDATA_CLEAR_HISTORY_DIALOG_MSG">Are you sure to delete all activity records and scores?</string>
	<string name="PREF_USERDATA_CLEAR_HISTORY_SUCCESSFUL_MSG">All records have been deleted.</string>
	<string translatable="false" name="PREF_USERDATA_CLEAR_CACHE_KEY">clear_cache</string>
	<string name="PREF_USERDATA_CLEAR_CACHE_TITLE">Clear cache</string>
	<string name="PREF_USERDATA_CLEAR_CACHE_SUMMARY">Clear all cached documents and thumbnails.</string>
	<string name="PREF_USERDATA_CLEAR_CACHE_DIALOG_MSG">Document and thumbnail cache will be cleared.</string>
	<string name="PREF_USERDATA_CLEAR_CACHE_SUCCESSFUL_MSG">All cache have been cleared.</string>
	<string name="DIALOG_UNINSTALL_OLD_VERSION_TITLE">Uninstall old version</string>
	<string name="DIALOG_UNINSTALL_OLD_VERSION_MSG">You have installed the latest version, please uninstall the old version.</string>
	<string name="DIALOG_BUTTON_YES">Yes</string>
	<string name="DIALOG_BUTTON_NO">No</string>
	<string name="DIALOG_BUTTON_OK">OK</string>
	<string name="DIALOG_BUTTON_CANCEL">Cancel</string>
	<string name="DIALOG_BUTTON_CLEAR">Clear</string>
	<string name="DIALOG_BUTTON_UPDATE">Update</string>
	<string name="DIALOG_BUTTON_LATER">Later</string>
	<string name="DIALOG_BUTTON_EXIT">Exit</string>
	<string name="DIALOG_BUTTON_RATE">Rate</string>
	<string name="DIALOG_BUTTON_MORE_APPS">More apps</string>
	<string name="notification_download_finished_msg">The download is finished, click to install.</string>
	<string name="notification_download_error_msg">The download is error, please try later.</string>
	<!-- Theme activity -->
	<string name="SKIN_ACTIVITY_SET_SKIN">Set skin</string>
	<string name="SKIN_ACTIVITY_ACTIONBAR_ACCEPT">Accept</string>
	<!-- Invisible -->
    <item type="id" name="piece_index"/><!-- begin from 1 -->
	<string translatable="false" name="PREF_INVISIBLE_CATEGORY_KEY">invisible_category</string>
	<string translatable="false" name="PREF_APP_ISRATED_KEY">app_israted</string>
	<string translatable="false" name="PREF_ADS_XML_LASTMODIFIED_KEY">ads_xml_lastmodified</string>
	<string translatable="false" name="PREF_APPSUPDATE_XML_LASTMODIFIED_KEY">appsupdate_xml_lastmodified</string>
	<string translatable="false" name="PREF_PUZZLES_XML_LASTMODIFIED_KEY">puzzles_xml_lastmodified</string>
	<string translatable="false" name="PREF_LASTPLAY_PACKAGE_CODE_KEY">lastplay_package_code</string>
	<string translatable="false" name="PREF_LASTPLAY_SCOREID_KEY">lastplay_scoreid</string>
	<string translatable="false" name="PREF_APK_NEWVERSION_URL_KEY">apk_newversion_url</string>
	<string translatable="false" name="PREF_APK_NEWVERSION_GOOGLE_URL_KEY">apk_newversion_google_url</string>
	<string translatable="false" name="PREF_APK_NEWVERSION_CODE_KEY">apk_newversion_code</string>
	<string translatable="false" name="PREF_APK_NEWVERSION_PACKAGE_KEY">apk_newversion_package</string>
	<string translatable="false" name="PREF_APK_NEWVERSION_LASTMODIFIED_KEY">apk_newversion_lastmodified</string>
	<string translatable="false" name="PREF_APK_NEWVERSION_CONTENTLENGTH_KEY">apk_newversion_contentlength</string>
	<string translatable="false" name="PREF_APP_RUNTIMES_KEY">app_runtimes</string>
	<string translatable="false" name="PREF_AD_UNIT_ID_KEY">ad_unit_id</string>
	<string translatable="false" name="PREF_AD_INTERSTITIAL_ID_KEY">ad_interstitial_id</string>
	<string translatable="false" name="PREF_APK_VERSION_CODE_KEY">apk_version_code</string>
	<string translatable="false" name="PREF_HAS_MERGED_OLD_PREF_KEY">has_merged</string>
	<string translatable="false" name="PREF_OLD_APP_KEY">old_app</string>
	<string translatable="false" name="PREF_THEME_CODE_KEY">theme_code</string>
	<string translatable="false" name="PREF_THEME_NAME_KEY">theme_name</string>
</resources>