<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/PREF_TITLE">
    <PreferenceCategory android:title="@string/PREF_UPDATE_CATEGORY_TITLE" android:key="@string/PREF_UPDATE_CATEGORY_KEY">
		<PreferenceScreen
            android:key="@string/PREF_UPDATE_KEY"
            android:title="@string/PREF_UPDATE_TITLE"
            android:summary="@string/PREF_UPDATE_SUMMAY"
	        android:icon="@drawable/ic_system_update_blue_48dp"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/PREF_GENERAL">
		<PreferenceScreen
	        android:key="@string/PREF_SKIN_KEY" 
	        android:title="@string/PREF_SKIN_TITLE" 
	        android:icon="@drawable/ic_palette_colorful_48dp"
	        />
		<CheckBoxPreference
	    	android:title="@string/PREF_SOUND_EFFECT"
	    	android:key="@string/PREF_SOUND_EFFECT_KEY"
	        android:summaryOn="@string/PREF_SOUND_EFFECT_SUMMARY_ON"
	        android:summaryOff="@string/PREF_SOUND_EFFECT_SUMMARY_OFF"
	        android:defaultValue="true"
	        android:icon="@drawable/ic_pref_sound"
	        />
		<CheckBoxPreference
	    	android:title="@string/PREF_BACKGROUND_MUSIC"
	    	android:key="@string/PREF_BACKGROUND_MUSIC_KEY"
	        android:summaryOn="@string/PREF_BACKGROUND_MUSIC_SUMMARY_ON"
	        android:summaryOff="@string/PREF_BACKGROUND_MUSIC_SUMMARY_OFF"
	        android:defaultValue="true"
	        android:icon="@drawable/ic_pref_music"
	        />
        <CheckBoxPreference
	    	android:title="@string/PREF_SCREEN_FULL"
	    	android:key="@string/PREF_SCREEN_FULL_KEY"
	        android:summaryOn="@string/PREF_SCREEN_FULL_SUMMARY_ON"
	        android:summaryOff="@string/PREF_SCREEN_FULL_SUMMARY_OFF"
	        android:defaultValue="true"
	        android:icon="@drawable/ic_pref_fullscreen"
	        />
		<ListPreference 
		    android:title="@string/PREF_DIFFICULTY_TITLE" 
		    android:key="@string/PREF_DIFFICULTY_KEY"
		    android:summary="@string/PREF_DIFFICULTY_SUMMARY"
		    android:negativeButtonText="@string/DIALOG_BUTTON_CANCEL"
		    android:dialogTitle="@string/PREF_DIFFICULTY_DIALOG_TITLE"
		    android:defaultValue="@string/PREF_DIFFICULTY_DEFAULT"
		    android:entries="@null"
		    android:entryValues="@array/difficulty_value"
		    android:icon="@drawable/ic_pref_difficulty"
		    />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/PREF_USERDATA_TITLE">
		<PreferenceScreen
            android:key="@string/PREF_USERDATA_CLEAR_HISTORY_KEY"
            android:title="@string/PREF_USERDATA_CLEAR_HISTORY_TITLE"
            android:summary="@string/PREF_USERDATA_CLEAR_HISTORY_SUMMARY"
            android:icon="@drawable/ic_pref_clear_records"
            />
		<PreferenceScreen
            android:key="@string/PREF_USERDATA_CLEAR_CACHE_KEY"
            android:title="@string/PREF_USERDATA_CLEAR_CACHE_TITLE"
            android:summary="@string/PREF_USERDATA_CLEAR_CACHE_SUMMARY"
            android:icon="@drawable/ic_pref_clear_cache"
            />
	</PreferenceCategory>
    <PreferenceCategory android:title="@string/PREF_ABOUT_CATEGORY_TITLE" android:key="@string/PREF_ABOUT_CATEGORY_KEY">
	    <PreferenceScreen 
	        android:key="@string/PREF_ABOUT_RATE_KEY"
	        android:title="@string/PREF_ABOUT_RATE_TITLE" 
	        android:summary="@string/PREF_ABOUT_RATE_SUMMARY" 
	        android:icon="@drawable/ic_pref_star"
	        />
	    <PreferenceScreen
	        android:key="@string/PREF_ABOUT_VERSION_KEY" 
	        android:title="@string/app_name" 
	        android:summary="@string/PREF_ABOUT_VERSION_SUMMARY"
	        android:icon="@drawable/ic_launcher"
	        />
	</PreferenceCategory>
    <PreferenceCategory android:title="@string/PREF_INVISIBLE_CATEGORY_KEY" android:key="@string/PREF_INVISIBLE_CATEGORY_KEY">
        <CheckBoxPreference
	    	android:key="@string/PREF_APP_ISRATED_KEY"
	        android:defaultValue="@null"
	        />
        <EditTextPreference
            android:key="@string/PREF_ADS_XML_LASTMODIFIED_KEY"
            android:defaultValue="@null"
            />
        <EditTextPreference
            android:key="@string/PREF_APPSUPDATE_XML_LASTMODIFIED_KEY"
            android:defaultValue="@null"
            />
        <EditTextPreference
            android:key="@string/PREF_PUZZLES_XML_LASTMODIFIED_KEY"
            android:defaultValue="@null"
            />
        <EditTextPreference
            android:key="@string/PREF_LASTPLAY_PACKAGE_CODE_KEY"
            android:defaultValue="@null"
            />
		<EditTextPreference
            android:key="@string/PREF_LASTPLAY_SCOREID_KEY"
            android:defaultValue="@null"
            />
        <EditTextPreference
            android:key="@string/PREF_APK_NEWVERSION_CODE_KEY"
            android:defaultValue="@null"
            />
        <EditTextPreference
            android:key="@string/PREF_APK_NEWVERSION_PACKAGE_KEY"
            android:defaultValue="@null"
            />
        <EditTextPreference
            android:key="@string/PREF_APK_NEWVERSION_URL_KEY"
            android:defaultValue="@null"
            />
        <EditTextPreference
            android:key="@string/PREF_APK_NEWVERSION_GOOGLE_URL_KEY"
            android:defaultValue="@null"
            />
        <EditTextPreference
            android:key="@string/PREF_APK_NEWVERSION_LASTMODIFIED_KEY"
            android:defaultValue="@null"
            />
		<EditTextPreference
            android:key="@string/PREF_APK_NEWVERSION_CONTENTLENGTH_KEY"
            android:defaultValue="@null"
            />
		<EditTextPreference
            android:key="@string/PREF_APP_RUNTIMES_KEY"
            android:defaultValue="@null"
            />
        <EditTextPreference
            android:key="@string/PREF_AD_UNIT_ID_KEY"
            android:defaultValue="@string/ad_banner_id"
            />
        <EditTextPreference
            android:key="@string/PREF_AD_INTERSTITIAL_ID_KEY"
            android:defaultValue="@string/ad_interstitial_id"
            />
        <EditTextPreference
            android:key="@string/PREF_APK_VERSION_CODE_KEY"
            android:defaultValue="@null"
            />
        <CheckBoxPreference
	    	android:key="@string/PREF_HAS_MERGED_OLD_PREF_KEY"
	        android:defaultValue="@null"
	        />
		<EditTextPreference
            android:key="@string/PREF_OLD_APP_KEY"
            android:defaultValue="@null"
            />
		<EditTextPreference
            android:key="@string/PREF_THEME_CODE_KEY"
            android:defaultValue="@string/theme_code"
            />
		<EditTextPreference
            android:key="@string/PREF_THEME_NAME_KEY"
            android:defaultValue="@null"
            />
	</PreferenceCategory>
</PreferenceScreen>
