<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:alpha="http://schemas.android.com/apk/res-auto"
	>
	<item
		android:id="@+id/actionbar_puzzle_help"
		android:orderInCategory="1"
		alpha:showAsAction="ifRoom"
		android:icon="@drawable/ic_help_white_48dp"
		android:title="@string/puzzle_hints_label">
		<menu>
			<item
				android:id="@+id/actionbar_puzzle_move"
				android:orderInCategory="2"
				alpha:showAsAction="ifRoom|withText"
				android:icon="@drawable/ic_find_in_page_white_48dp"
				android:title="@string/puzzle_hints_move_label"/>
			<item
				android:id="@+id/actionbar_puzzle_view"
				android:orderInCategory="3"
				alpha:showAsAction="ifRoom|withText"
				android:icon="@drawable/ic_visibility_white_48dp"
				android:title="@string/puzzle_hints_view_label"/>
		</menu>
	</item>
</menu>
