<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#CC000000"
	android:onClick="dismissRecordsFragment"
	>
	<ScrollView 
		android:layout_width="match_parent" 
	    android:layout_height="wrap_content"
	    android:scrollbars="vertical"
	    android:layout_gravity="top"
    	>
		<TableLayout
		    android:id="@+id/records_tablelayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:stretchColumns="*"
	  		android:padding="3dip"
	  		android:onClick="dismissRecordsFragment"
		    >
		    <TableRow
		        android:paddingTop="10dp"
		        android:paddingBottom="5dp" 
		        >
		        <TextView
		             android:text="@string/records_header_difficulty"
		             android:layout_gravity="center"
		             android:layout_width="0dp"
		             style="@style/records_layout_header_text"
		            />
		        <TextView
		             android:text="@string/records_header_time"
		             android:layout_gravity="center"
		             android:layout_width="0dp"
		             style="@style/records_layout_header_text"
		            />
		        <TextView
		             android:text="@string/records_header_moves"
		             android:layout_gravity="center"
		             android:layout_width="0dp"
		             style="@style/records_layout_header_text"
		            />
			</TableRow>
		</TableLayout>
	</ScrollView>
	<TextView
	    android:id="@+id/records_no_records"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:onClick="dismissRecordsFragment"
	    android:text="@string/records_norecords"
	    style="@style/records_layout_norecords_text"
	    />
</FrameLayout>
