<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/finished_root_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#EE000000"
	>
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_gravity="center"
	    >
		<LinearLayout 
		    android:id="@+id/finished_buttons_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:orientation="vertical"
		    >
		    <LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:weightSum="3"
		        >
		        <TextView
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:text="" 
		            />
		        <ImageButton
		            android:id="@+id/finished_btn_wallpaper"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:background="@null"
		            android:src="@drawable/btn_wallpaper" 
		            android:layout_gravity="center"
		            />
		        <TextView
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:text="" 
		            />
		        <ImageButton
		            android:id="@+id/finished_btn_share"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:background="@null"
		            android:src="@drawable/btn_share" 
		            android:layout_gravity="center"
		            />
		        <TextView
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:text="" 
		            />
			</LinearLayout>
	        <ImageButton
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@null"
	            android:src="@drawable/btn_share" 
	            android:visibility="invisible"
	            />
		    <LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:weightSum="4"
		        >
		        <TextView
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:text="" 
		            />
		        <ImageButton
		            android:id="@+id/finished_btn_retry"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:background="@null"
		            android:src="@drawable/btn_retry" 
		            android:layout_gravity="center"
		            />
		        <TextView
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:text="" 
		            />
		        <ImageButton
		            android:id="@+id/finished_btn_grid"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:background="@null"
		            android:src="@drawable/btn_back2grid" 
		            android:layout_gravity="center"
		            />
		        <TextView
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:text="" 
		            />
		        <ImageButton
		            android:id="@+id/finished_btn_next"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:background="@null"
		            android:src="@drawable/btn_next"
		            android:layout_gravity="center"
		            />
		        <TextView
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:text="" 
		            />
			</LinearLayout>
	        <ImageButton
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@null"
	            android:src="@drawable/btn_share" 
	            android:visibility="invisible"
	            />
		</LinearLayout>
	    <LinearLayout 
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_above="@id/finished_buttons_layout"
			android:gravity="center"
			android:orientation="vertical"
		    >
			<LinearLayout
			    android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_gravity="center"
		        android:layout_marginBottom="30dp"
			    >
			    <TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
			        android:text="@string/finished_difficulty_label"
			        style="@style/finished_layout_text"
			    	/>
			    <TextView
			        android:id="@+id/finished_difficulty_value"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
			        android:text="9x9"
			        style="@style/finished_layout_text"
			    	/>
			</LinearLayout>
		    <TextView
		        android:id="@+id/finished_player_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
		        android:text="@string/finished_player_label"
		        android:gravity="center"
		        style="@style/finished_layout_text"
		        android:layout_marginBottom="5dp"
		    />
			<LinearLayout 
			    android:id="@+id/finished_player_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_gravity="center"
				android:weightSum="2"
		        android:layout_marginBottom="15dp"
			    >
			    <LinearLayout
			        android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:orientation="horizontal"
					android:layout_gravity="center"
					android:gravity="center"
			        >
				    <TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
				        android:text="@string/finished_time_label"
				        style="@style/finished_layout_text"
				        />
				    <TextView
				        android:id="@+id/finished_player_time_value"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
				        android:text="23:59:59"
				        style="@style/finished_layout_text"
				        />
			    </LinearLayout>
			    <LinearLayout
			        android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:orientation="horizontal"
					android:layout_gravity="center"
					android:gravity="center"
			        >
				    <TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
				        android:text="@string/finished_moves_label"
				        style="@style/finished_layout_text"
				        />
				    <TextView
				        android:id="@+id/finished_player_moves_value"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
				        android:text="99999"
				        style="@style/finished_layout_text"
				        />
			    </LinearLayout>
			</LinearLayout>	    
		    <TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
		        android:text="@string/finished_record_label"
		        android:gravity="center"
		        style="@style/finished_layout_text"
		        android:layout_marginBottom="5dp"
		    />
			<LinearLayout 
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_gravity="center"
				android:weightSum="2"
			    >
			    <LinearLayout
			        android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:orientation="horizontal"
					android:layout_gravity="center"
					android:gravity="center"
			        >
				    <TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
				        android:text="@string/finished_time_label"
				        style="@style/finished_layout_text"
				        />
				    <TextView
				        android:id="@+id/finished_best_time_value"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
				        android:text="59:59"
				        style="@style/finished_layout_text"
				        />
				</LinearLayout>
			    <LinearLayout
			        android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:orientation="horizontal"
					android:layout_gravity="center"
					android:gravity="center"
			        >
				    <TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
				        android:text="@string/finished_moves_label"
				        style="@style/finished_layout_text"
				        />
				    <TextView
				        android:id="@+id/finished_best_moves_value"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
				        android:text="999"
				        style="@style/finished_layout_text"
				        />
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</RelativeLayout>
</FrameLayout>
